# shop.njtechstudio

./: .dockerignore  .gitignore  IMPLEMENTATION_SUMMARY.md  LIKES_IMPLEMENTATION.md  README.md
backend/: Dockerfile  Dockerfile.celery  README.md  SETUP.md  apis.md  db.sqlite3  docker-compose.yml  kafka_listener.py  pyproject.toml  seed_data.py  start-dev.sh
backend/ecommerce/: settings.py  urls.py
backend/insights/: README.md  __init__.py  admin.py  analytics.py  apps.py  chat.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  utils.py
backend/insights/events/: __init__.py  cart_events.py  order_events.py  product_events.py
backend/insights/kafka/: README.md  __init__.py  config.py  consumer.py  producer.py
backend/insights/migrations/: 0001_initial.py  0002_rename_insights_pro_embeddi_idx_insights_pr_embeddi_96fcfa_idx_and_more.py  0003_remove_productembedding_insights_pr_embeddi_96fcfa_idx_and_more.py  0004_categoryembedding_usersemanticprofile.py  0005_productdemand.py  0006_remove_productdemand.py
backend/insights/services/: __init__.py  embeddings.py  recommendation.py  request_parser.py  search.py
backend/insights/views/: __init__.py  admin_demand.py  embeddings.py  search.py  user_interests.py
backend/store/: admin.py  apps.py  signals.py  tasks.py  tests.py  urls.py
backend/store/migrations/: 0001_initial.py  0002_testimonial_category_image_url_payment.py  0003_order_city_order_customer_email_order_customer_name_and_more.py  0004_order_payment_status.py  0005_order_cancelled_at_order_delivered_at_and_more.py  0010_faq.py  (+9 more)
(+106 files in other folders)
